Contact text overlapping location icon issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1279,7 +1279,7 @@ textarea.input-field {
   .section-subtitle {
     position: absolute;
     top: 0;
-    left: 0;
+    left: -20px;
     transform: rotate(0.75turn) translateX(-100%);
     transform-origin: left top;
     margin-bottom: 0;
